# Flixsy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
config/: settings.py  urls.py
core/: models.py  services.py  tmdb.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/core/: style.css
core/static/core/css/: base.css  detail.css  saved.css
core/static/core/js/: detail.js  home.js  saved.js
core/templates/core/: detail.html  home.html  saved.html  search_results.html  template.html
docs/superpowers/plans/: 2026-05-29-search-function-implementation.md  2026-05-30-saved-watchlist.md
docs/superpowers/specs/: 2026-05-29-search-function-design.md  2026-05-30-saved-watchlist-design.md  2026-05-30-scroll-arrows-design.md  2026-05-30-season-episode-selector-design.md  2026-05-30-season-episode-selector-docs.md
