[project]
name = "flixsy"
version = "0.1.0"
description = "Movie discovery platform with real-time data from RapidAPI IMDB"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.scripts]
flixsy-manage = "manage:main"

[tool.django]
settings = "config.settings"
